--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -134,6 +134,9 @@ custom_proxy_group=🐙 Github`select`🚀 节点选择`[]🇭🇰 香港节点-
 custom_proxy_group=🐦 Twitter`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
 custom_proxy_group=🎈 Line`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
+cuetome_proxy_group=🇭🇰 香港节点 Fallback`fallback`((^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:港|香港|HongKong|HK|Hong Kong)).*$))`http://www.gstatic.com/generate_204`300,100
+;custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*x(?:[2-9]|[1-9][0-9])))`http://www.gstatic.com/generate_204`300,100
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,100
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
 custom_proxy_group=🇺🇲 美国节点`select`(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z]))
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
