--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -17,6 +17,7 @@ payload:
   - '+.test-ipv6.com'
   - '+.tubeninja.net'
   - '+.imazing.com'
+  - '+.julialang.org'
   - '+.bulianglin.com'
   - '+.atlassian.com'
   - '+.alive.bar'
