--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -185,7 +185,7 @@ custom_proxy_group=🇦🇷 阿根廷节点`select`(阿根廷|Argentina|AR)
 custom_proxy_group=🇿🇦 南非节点`select`(南非|Zuid-Afrika)
 custom_proxy_group=🇸🇪 瑞典节点`select`(瑞典|Sweden|Sverige)
 custom_proxy_group=🇹🇷 土耳其节点`select`(TR|土耳其|土)
-custom_proxy_group=🇦🇺 澳大利亚节点`select`(土澳|澳大利亚|澳|AUS)
+custom_proxy_group=🇦🇺 澳大利亚节点`select`(土澳|澳大利亚|AUS)
 custom_proxy_group=🇵🇭 菲律宾节点`select`(菲|PH)
 custom_proxy_group=🇹🇭 泰国节点`select`(泰|TH)
 custom_proxy_group=🇵🇰 巴基斯坦节点`select`(巴基斯坦|PK)
