--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -129,7 +129,7 @@ custom_proxy_group=₿ Binance`select`[]🇺🇲 美国节点-自动`[]🇭🇰 
 custom_proxy_group=👛 Wallet`select`[]🇺🇲 美国节点-自动`[]🇯🇵 日本节点-自动
 custom_proxy_group=🤖 DeepL`select`[]🇺🇲 美国节点-自动`[]DIRECT`.*
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇳🇬 尼日利亚节点
+custom_proxy_group=🎥 Netflix`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇳🇬 尼日利亚节点`.*
 custom_proxy_group=🎥 Disney+`select`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇳🇬 尼日利亚节点
 custom_proxy_group=🐙 Github`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
 custom_proxy_group=🐦 Twitter`select`🚀 节点选择`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇸🇬 新加坡节点-自动`[]🇺🇲 美国节点-自动
