--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -121,6 +121,7 @@ payload:
   - '+.prod.hjholdings.tv'
   - '+.streaks.jp'
   - '+.yb.uncn.jp'
+  - '+.paperless-ngx.com'
   - 'itvpnpmobile-a.akamaihd.net'
   - '+.itv.com'
   - '+.itvstatic.com'
