--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -63,6 +63,7 @@ payload:
   - '+.yahoo.co.jp'
   - '+.deezer.com'
   - '+.dzcdn.net'
+  - '+.digitalnomadlc.com'
   - 'bcbolt446c5271-a.akamaihd.net'
   - 'content.jwplatform.com'
   - 'edge.api.brightcove.com'
