--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -26,6 +26,7 @@ payload:
   - '+.bahamut.com.tw'
   - '+.gamer.com.tw'
   - '+.hinet.net'
+  - '+.pekingmuge.top'
   - 'd151l6v8er5bdm.cloudfront.net'
   - 'edge.api.brightcove.com'
   - 'players.brightcove.net'
