--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -992,6 +992,7 @@ payload:
   - '+.chingcheong.com'
   - '+.chinman.net'
   - '+.openai.chinnsenn.com'
+  - '+.community.oneplus.com'
   - '+.chithu.org'
   - '+.chobit.cc'
   - '+.chosun.com'
