--- a/providers/ProxyMedia_domain.yaml
+++ b/providers/ProxyMedia_domain.yaml
@@ -112,6 +112,7 @@ payload:
   - '+.ocnttv.com'
   - '+.cws-hulu.conviva.com'
   - '+.hulu.com'
+  - '+.atomiclearning.app'
   - '+.hulu.hb.omtrdc.net'
   - '+.hulu.sc.omtrdc.net'
   - '+.huluad.com'
