--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -29,6 +29,7 @@ payload:
   - '+.nexitally.com'
   - '+.sonatype.org'
   - '+.milkcat.net'
+  - '+.milkcat.io'
   - '+.v1.mk'
   - '+.appcenter.ms'
   - '+.draw.io'
