--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -138,6 +138,7 @@ payload:
   - '+.18p2p.com'
   - '+.18virginsex.com'
   - '+.1949er.org'
+  - '+.kinoshita-chintai.com'
   - '+.1984.city'
   - '+.1984bbs.com'
   - '+.1984bbs.org'
