--- a/providers/AmazonPrimeVideo.yaml
+++ b/providers/AmazonPrimeVideo.yaml
@@ -1,2 +1,13 @@
 payload:
-  - 'DOMAIN,--placeholder--'
+  - '+.aiv-cdn.net'
+  - '+.amazonprimevideos.com'
+  - '+.amazonvideo.cc'
+  - '+.amazonvideo.com'
+  - '+.prime-video.com'
+  - '+.primevideo.cc'
+  - '+.primevideo.com'
+  - '+.primevideo.info'
+  - '+.primevideo.org'
+  - '+.primevideo.tv'
+  - '+.amazonprimevideo.cn'
+  - '+.amazonprimevideo.com.cn'
