--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -15,8 +15,8 @@ ruleset=📲 Telegram,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/C
 ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Epic_domain.yaml
 ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Sony_domain.yaml
 ruleset=🎮 游戏平台,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Steam_domain.yaml
-ruleset=🎮 Nintendo,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_domain.yaml
-ruleset=🎮 Nintendo,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_ipcidr.yaml,no-resolve
+;ruleset=🎮 Nintendo,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_domain.yaml
+;ruleset=🎮 Nintendo,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/Nintendo_ipcidr.yaml,no-resolve
 ruleset=🎵 TikTok,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/TikTok/TikTok_No_Resolve.yaml
 ruleset=📹 YouTube,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/youtube_domain.yaml
 ruleset=📹 YouTube,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube_No_Resolve.yaml
