--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -146,6 +146,7 @@ payload:
   - '+.1998cdp.org'
   - '+.1bao.org'
   - '+.1dumb.com'
+  - '+.docker.io'
   - '+.1eew.com'
   - '+.1mobile.com'
   - '+.1mobile.tw'
