--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -66,8 +66,8 @@ ruleset=🚀 节点选择,clash-domain:https://raw.githubusercontent.com/chinnse
 ruleset=🚀 节点选择,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/proxies_ipcidr.yaml,no-resolve
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/proxies_classical.yaml
 ruleset=📰 微博,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/weibo_domain.yaml
-;ruleset=💬 微信,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wechat_domain.yaml
-;ruleset=💬 微信,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wechat_ipcidr.yaml,no-resolve
+ruleset=💬 微信,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wechat_domain.yaml
+ruleset=💬 微信,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/wechat_ipcidr.yaml,no-resolve
 ruleset=🍠 小红书,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/XiaoHongShu_domain.yaml
 ruleset=🕺 字节跳动,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/ByteDance_domain.yaml
 ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/ChinaDomain_domain.yaml
@@ -166,7 +166,7 @@ custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]♻
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🇮🇳 印度节点`[]🇱🇺 卢森堡节点`[]🇳🇱 荷兰节点`[]🇮🇹 意大利节点`[]🇨🇭 瑞士节点`[]🇫🇷 法国节点`[]🇸🇦 沙特阿拉伯节点`[]🇮🇱 以色列节点`[]🇦🇪 迪拜节点`[]🇲🇽 墨西哥节点`[]🇨🇱 智利节点`[]🇦🇷 阿根廷节点`[]🇿🇦 南非节点`[]🇸🇪 瑞典节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇵🇰 巴基斯坦节点`[]🇹🇭 泰国节点`[]🇵🇭 菲律宾节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换
 custom_proxy_group=🎮 游戏平台`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点
 custom_proxy_group=📰 微博`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 新加坡节点-自动`[]🇭🇰 香港节点-自动`[]🇨🇳 台湾节点-自动`[]🇯🇵 日本节点-自动`[]🇺🇲 美国节点-自动`[]🇰🇷 韩国节点-自动`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🇮🇳 印度节点`[]🇱🇺 卢森堡节点`[]🇳🇱 荷兰节点`[]🇮🇹 意大利节点`[]🇨🇭 瑞士节点`[]🇫🇷 法国节点`[]🇸🇦 沙特阿拉伯节点`[]🇮🇱 以色列节点`[]🇦🇪 迪拜节点`[]🇲🇽 墨西哥节点`[]🇨🇱 智利节点`[]🇦🇷 阿根廷节点`[]🇿🇦 南非节点`[]🇸🇪 瑞典节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇵🇰 巴基斯坦节点`[]🇹🇭 泰国节点`[]🇵🇭 菲律宾节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换
-;custom_proxy_group=💬 微信`select`[]DIRECT`[]REJECT`[]🚀 手动切换
+custom_proxy_group=💬 微信`select`[]DIRECT`[]REJECT`[]🚀 手动切换
 custom_proxy_group=🍠 小红书`select`[]DIRECT`[]REJECT`[]🚀 手动切换
 custom_proxy_group=🕺 字节跳动`select`[]DIRECT`[]REJECT`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
