--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -45,7 +45,7 @@ ruleset=👛 Wallet,clash-domain:https://raw.githubusercontent.com/chinnsenn/Cla
 ruleset=₿ Binance,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Binance/Binance_No_Resolve.yaml
 ruleset=🤖 Anthropic,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/anthropic_domain.yaml
 ruleset=🤖 DeepL,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/deepl_domain.yaml
-ruleset=🐙 Github,clash-classic:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/github_domain.yaml
+ruleset=🐙 Github,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/github_domain.yaml
 ruleset=☁️ CloudFlare,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/cloudflare_domain.yaml
 ruleset=☁️ CloudFlare,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/cloudflare_ip.yaml
 ruleset=🐦 Twitter,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
