--- a/rule_provider_config.yaml
+++ b/rule_provider_config.yaml
@@ -47,7 +47,7 @@ ruleset=🤖 Anthropic,clash-domain:https://raw.githubusercontent.com/chinnsenn/
 ruleset=🤖 DeepL,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/deepl_domain.yaml
 ruleset=🐙 Github,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/github_domain.yaml
 ruleset=☁️ CloudFlare,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/cloudflare_domain.yaml
-ruleset=☁️ CloudFlare,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/cloudflare_ip.yaml
+;ruleset=☁️ CloudFlare,clash-ipcidr:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/cloudflare_ip.yaml
 ruleset=🐦 Twitter,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
 ruleset=🎈 Line,clash-classic:https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Clash/Line/Line_No_Resolve.yaml
 ruleset=🎼 Spotify,clash-domain:https://raw.githubusercontent.com/chinnsenn/ClashCustomRule/master/providers/spotify_domain.yaml
