--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -995,6 +995,7 @@ payload:
   - '+.chingcheong.com'
   - '+.chinman.net'
   - '+.openai.chinnsenn.com'
+  - '+.openrouter.ai'
   - '+.community.oneplus.com'
   - '+.chithu.org'
   - '+.chobit.cc'
