--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -2123,6 +2123,7 @@ payload:
   - '+.guo.media'
   - '+.guruonline.hk'
   - '+.gutteruncensored.com'
+  - '+.gutingjun.com'
   - '+.gvlib.com'
   - '+.gvm.com.tw'
   - '+.gvt0.com'
