--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -4580,6 +4580,7 @@ payload:
   - '+.taup.net'
   - '+.taup.org.tw'
   - '+.taweet.com'
+  - '+.tavily.com'
   - '+.tbcollege.org'
   - '+.tbi.org.hk'
   - '+.tbicn.org'
