--- a/providers/proxies_domain.yaml
+++ b/providers/proxies_domain.yaml
@@ -495,7 +495,7 @@ payload:
   - '+.authorizeddns.net'
   - '+.authorizeddns.org'
   - '+.authorizeddns.us'
-  - '+.auth0.com
+  - '+.auth0.com'
   - '+.autodraw.com'
   - '+.av-e-body.com'
   - '+.av.com'
